--- a/addons/dashboard/dashboard-controller.yaml
+++ b/addons/dashboard/dashboard-controller.yaml
@@ -2,20 +2,20 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: kubernetes-dashboard-v1.4.0
+  name: kube-dashboard-v1.4.0
   namespace: kube-system
   labels:
-    k8s-app: kubernetes-dashboard
+    k8s-app: kube-dashboard
     version: v1.4.0
     kubernetes.io/cluster-service: "true"
 spec:
   replicas: 1
   selector:
-    k8s-app: kubernetes-dashboard
+    k8s-app: kube-dashboard
   template:
     metadata:
       labels:
-        k8s-app: kubernetes-dashboard
+        k8s-app: kube-dashboard
         version: v1.4.0
         kubernetes.io/cluster-service: "true"
       annotations:
@@ -23,7 +23,7 @@ spec:
         scheduler.alpha.kubernetes.io/tolerations: '[{"key":"CriticalAddonsOnly", "operator":"Exists"}]'
     spec:
       containers:
-      - name: kubernetes-dashboard
+      - name: kube-dashboard
         image: localhost:5000/addons/dashboard:v1.4.0
         resources:
           # keep request = limit to keep this container in guaranteed class
