--- a/addons/dashboard/dashboard-service.yaml
+++ b/addons/dashboard/dashboard-service.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kubernetes-dashboard
+  name: kube-dashboard
   namespace: kube-system
   labels:
-    k8s-app: kubernetes-dashboard
+    k8s-app: kube-dashboard
     kubernetes.io/cluster-service: "true"
 spec:
   selector:
-    k8s-app: kubernetes-dashboard
+    k8s-app: kube-dashboard
   ports:
   - port: 80
     targetPort: 9090
