--- a/apps/wordpress/app-deployment.yaml
+++ b/apps/wordpress/app-deployment.yaml
@@ -15,7 +15,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: wp-pv-claim
+  name: wordpress-app-pv-claim
   labels:
     app: wordpress
 spec:
@@ -26,7 +26,7 @@ spec:
       storage: 20Gi
   selector:
     matchLabels:
-      aspect: "wordpress"
+      aspect: app
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -60,4 +60,4 @@ spec:
       volumes:
       - name: wordpress-persistent-storage
         persistentVolumeClaim:
-          claimName: wp-pv-claim
+          claimName: wordpress-app-pv-claim
