--- a/addons/docker-registry/docker-registry-daemonset.yaml
+++ b/addons/docker-registry/docker-registry-daemonset.yaml
@@ -21,6 +21,8 @@ spec:
           value: :5000
         - name: REGISTRY_STORAGE_FILESYSTEM_ROOTDIRECTORY
           value: /var/lib/registry
+        - name: REGISTRY_STORAGE_DELETE_ENABLED
+          value: "True"
         volumeMounts:
         - name: image-store
           mountPath: /var/lib/registry
