--- a/share/env.sh.sample
+++ b/share/env.sh.sample
@@ -30,7 +30,7 @@ VM_ENGINE="docker"
 VM_IFACE="eth0"
 
 ## ==Docker - nodes are launched as persistent docker containers
-DOCKER_BASE_IMG="karelian/kubian:v2"
+DOCKER_BASE_IMG="karelian/kube_base_kubian:latest"
 DOCKER_DNS_IMG="karelian/dnsdock:dev-amd64"
 DOCKER_BRIDGE="docker0"
 
