--- a/addons/dashboard/dashboard-controller.yaml
+++ b/addons/dashboard/dashboard-controller.yaml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: kube-dashboard-v1.4.0
+  name: kube-dashboard-v1.4.1
   namespace: kube-system
   labels:
     k8s-app: kube-dashboard
-    version: v1.4.0
+    version: v1.4.1
     kubernetes.io/cluster-service: "true"
 spec:
   replicas: 1
@@ -16,7 +16,7 @@ spec:
     metadata:
       labels:
         k8s-app: kube-dashboard
-        version: v1.4.0
+        version: v1.4.1
         kubernetes.io/cluster-service: "true"
       annotations:
         scheduler.alpha.kubernetes.io/critical-pod: ''
@@ -24,7 +24,7 @@ spec:
     spec:
       containers:
       - name: kube-dashboard
-        image: localhost:5000/addons/dashboard:v1.4.0
+        image: localhost:5000/kube/addons/dashboard:v1.4.1
         resources:
           # keep request = limit to keep this container in guaranteed class
           limits:
