--- a/addons/dns/kubedns-deployment.yaml
+++ b/addons/dns/kubedns-deployment.yaml
@@ -39,7 +39,7 @@ spec:
     spec:
       containers:
       - name: kubedns
-        image: localhost:5000/kubedns:1.7
+        image: localhost:5000/kube/addons/dns/kubedns:1.8
         livenessProbe:
           httpGet:
             path: /healthz
@@ -70,7 +70,7 @@ spec:
           name: dns-tcp-local
           protocol: TCP
       - name: dnsmasq
-        image: localhost:5000/kube-dnsmasq:1.3
+        image: localhost:5000/kube/addons/dns/dnsmasq:1.4
         args:
         - --cache-size=1000
         - --no-resolv
@@ -83,7 +83,7 @@ spec:
           name: dns-tcp
           protocol: TCP
       - name: healthz
-        image: localhost:5000/exechealthz:1.1
+        image: localhost:5000/kube/addons/dns/healthz:1.2
         args:
         - -cmd=nslookup kubernetes.default.svc.kubernetes.local 127.0.0.1 >/dev/null && nslookup kubernetes.default.svc.kubernetes.local 127.0.0.1:10053 >/dev/null
         - -port=8080
