--- a/apps/wordpress/mysql-deployment.yaml
+++ b/apps/wordpress/mysql-deployment.yaml
@@ -44,7 +44,7 @@ spec:
         tier: mysql
     spec:
       containers:
-      - image: localhost:5000/mysql
+      - image: localhost:5000/kube/apps/wordpress/mysql:5.6
         name: mysql
         env:
           # $ kubectl create secret generic mysql-pass --from-file=password.txt
