Update sample config

--- a/share/env.sh.sample
+++ b/share/env.sh.sample
@@ -20,6 +20,9 @@ declare -a KUBE_BINS=(
   "kubelet"
 )
 
+# =Persistence
+KUBE_PV="/pv/kube"
+
 # =Orchestrate
 #
 # The "orchestrate" stage uses the declared $VM_ENGINE to manage the lifecycle
@@ -31,6 +34,7 @@ VM_IFACE="eth0"
 VM_NUM_WORKERS=2
 
 ## ==Docker - nodes are launched as persistent docker containers
+USE_SYSTEM_DOCKER="yes"
 DOCKER_BASE_IMG="karelian/kube_base_kubian:latest"
 DOCKER_DNS_IMG="karelian/kube_base_dnsdock:dev-amd64"
 DOCKER_BRIDGE="docker0"
@@ -43,6 +47,6 @@ LXD_PROFILE="kube-profile"
 # =Provision
 MASTER_UNITS="etcd_single kube-apiserver_single kube-controller-manager kube-scheduler"
 WORKER_UNITS="docker kubelet_single kube-proxy"
-WORKER_DOCKER_STORAGE_ENGINE="overlay"
+WORKER_DOCKER_STORAGE_ENGINE="devicemapper"
 KUBE_SERVICE_CLUSTER_IP_RANGE="10.32.0.0/24"
 SECRET_TOKEN="ooohlotsofs3crets"
