--- a/addons/dashboard/dashboard-service.yaml
+++ b/addons/dashboard/dashboard-service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kube-dashboard
+  name: kubernetes-dashboard
   namespace: kube-system
   labels:
     k8s-app: kube-dashboard
