Switch back to absolute /pv paths for worker nodes

--- a/share/templates/lxd_profile.yaml
+++ b/share/templates/lxd_profile.yaml
@@ -18,7 +18,7 @@ devices:
     source: ${DOT}
     type: disk
   pvdir:
-    path: ${KUBE_PV}
+    path: /pv/kube
     source: ${KUBE_PV}
     type: disk
   tuntap:
