Use single master mode by default

--- a/share/env.sh.sample
+++ b/share/env.sh.sample
@@ -46,9 +46,8 @@ LXD_PROFILE="kube-profile"
 LXD_BRIDGE="lxdbr0"
 
 # =Provision
-MASTER_UNITS="etcd_single kube-apiserver_single kube-controller-manager kube-scheduler"
-WORKER_UNITS="docker kubelet_single kube-proxy masquerade"
+MASTER_UNITS="etcd kube-apiserver kube-controller-manager kube-scheduler"
+WORKER_UNITS="docker kubelet kube-proxy masquerade"
 WORKER_DOCKER_STORAGE_ENGINE="overlay2"
 KUBE_SERVICE_CLUSTER_IP_RANGE="10.32.0.0/24"
 SECRET_TOKEN="ooohlotsofs3crets"
-CLUSTER_NAME="minikube"
