Update sample env with new versions

--- a/share/env.sh.sample
+++ b/share/env.sh.sample
@@ -2,9 +2,9 @@
 #
 # During the "prepare" stage we pull essential kubernetes, etcd and docker
 # binaries as well as generate TLS certificates for the cluster.
-ETCD_VERSION="3.2.7"
-KUBE_VERSION="1.8.4"
-DOCKER_VERSION="17.09.0-ce"
+ETCD_VERSION="3.2.9"
+KUBE_VERSION="1.8.8"
+DOCKER_VERSION="17.12.0-ce"
 
 ETCD_TGZ="https://github.com/coreos/etcd/releases/download/v${ETCD_VERSION}/etcd-v${ETCD_VERSION}-linux-amd64.tar.gz"
 KUBE_TGZ="https://github.com/kubernetes/kubernetes/releases/download/v${KUBE_VERSION}/kubernetes.tar.gz"
@@ -20,9 +20,6 @@ declare -a KUBE_BINS=(
   "kubelet"
 )
 
-# =Persistence
-KUBE_PV="${HOME}/pv/kube"
-
 # =Orchestrate
 #
 # The "orchestrate" stage uses the declared $VM_ENGINE to manage the lifecycle
@@ -31,7 +28,11 @@ KUBE_PV="${HOME}/pv/kube"
 # Supported engines: lxd, docker
 VM_ENGINE="lxd"
 VM_IFACE="eth0"
-VM_NUM_WORKERS=1
+VM_NUM_WORKERS=2
+
+# =Persistence
+KUBE_HOST="foo.$VM_ENGINE"
+KUBE_PV="${HOME}/pv"
 
 ## ==Docker - nodes are launched as persistent docker containers
 # USE_SYSTEM_DOCKER="no"
@@ -41,7 +42,7 @@ DOCKER_BRIDGE="docker0"
 
 ## ==LXD - nodes are launched as persistent LXD/LXC containers
 LXD_BASE_IMG="kubuntu"
-LXD_IMG_FROM="images:ubuntu/zesty" # ubuntu 16.04 amd64
+LXD_IMG_FROM="images:ubuntu/zesty" # ubuntu 17.04 amd64
 LXD_PROFILE="kube-profile"
 LXD_BRIDGE="lxdbr0"
 
