--- a/addons/dns/kubedns-daemonset.yaml
+++ b/addons/dns/kubedns-daemonset.yaml
@@ -15,34 +15,32 @@
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
-  name: kube-dns-v19
+  name: kube-dns
   namespace: kube-system
   labels:
     k8s-app: kube-dns
-    version: v19
     kubernetes.io/cluster-service: "true"
 spec:
   # replicas: 1
   selector:
     matchLabels:
       k8s-app: kube-dns
-      version: v19
   template:
     metadata:
       labels:
         k8s-app: kube-dns
-        version: v19
-        kubernetes.io/cluster-service: "true"
+      annotations:
+        scheduler.alpha.kubernetes.io/critical-pod: ''
     spec:
       containers:
       - name: kubedns
-        image: gcr.io/google_containers/k8s-dns-kube-dns-amd64:1.14.5
+        image: gcr.io/google_containers/kubedns-amd64:1.9
         livenessProbe:
           httpGet:
-            path: /healthcheck/kubedns
-            port: 10054
+            path: /healthz
+            port: 8080
             scheme: HTTP
-          initialDelaySeconds: 30
+          initialDelaySeconds: 10
           timeoutSeconds: 5
           successThreshold: 1
           failureThreshold: 5
@@ -51,11 +49,13 @@ spec:
             path: /readiness
             port: 8081
             scheme: HTTP
+          # we poll on pod startup for the Kubernetes master service and
+          # only setup the /readiness HTTP server once that's available.
+          initialDelaySeconds: 15
+          timeoutSeconds: 5
         args:
-        # command = "/kube-dns"
         - --domain=kubernetes.local
         - --dns-port=10053
-        - --v=2
         ports:
         - containerPort: 10053
           name: dns-local
@@ -64,13 +64,8 @@ spec:
           name: dns-tcp-local
           protocol: TCP
       - name: dnsmasq
-        image: gcr.io/google_containers/k8s-dns-dnsmasq-nanny-amd64:1.14.5
+        image: gcr.io/google_containers/k8s-dns-dnsmasq-amd64:1.14.5
         args:
-        - -v=2
-        - -logtostderr
-        - -restartDnsmasq=true
-        - --
-        - -k
         - --cache-size=1000
         - --no-resolv
         - --server=127.0.0.1#10053
@@ -82,7 +77,7 @@ spec:
           name: dns-tcp
           protocol: TCP
       - name: healthz
-        image: gcr.io/google_containers/exechealthz:1.2
+        image: gcr.io/google_containers/exechealthz-amd64:1.2
         args:
         - -cmd=nslookup kubernetes.default.svc.kubernetes.local 127.0.0.1 >/dev/null && nslookup kubernetes.default.svc.kubernetes.local 127.0.0.1:10053 >/dev/null
         - -port=8080
