--- a/_tmp/rbac.yaml
+++ b/_tmp/rbac.yaml
@@ -5,7 +5,7 @@ metadata:
     rbac.authorization.kubernetes.io/autoupdate: "true"
   labels:
     kubernetes.io/bootstrapping: rbac-defaults
-  name: foo:admin 
+  name: nodes-kubelet:admin
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -15,7 +15,5 @@ subjects:
   kind: Group
   name: system:nodes
 - apiGroup: rbac.authorization.k8s.io
-  kind: User 
+  kind: User
   name: kubelet
-
-
