Update sample to k8s 1.9

--- a/share/env.sh.sample
+++ b/share/env.sh.sample
@@ -3,7 +3,7 @@
 # During the "prepare" stage we pull essential kubernetes, etcd and docker
 # binaries as well as generate TLS certificates for the cluster.
 ETCD_VERSION="3.2.9"
-KUBE_VERSION="1.8.8"
+KUBE_VERSION="1.9.3"
 DOCKER_VERSION="17.12.0-ce"
 
 ETCD_TGZ="https://github.com/coreos/etcd/releases/download/v${ETCD_VERSION}/etcd-v${ETCD_VERSION}-linux-amd64.tar.gz"
@@ -20,6 +20,10 @@ declare -a KUBE_BINS=(
   "kubelet"
 )
 
+# =Persistence
+KUBE_PV="${HOME}/mnt/pv"
+KUBE_HOST="shrewd.lxd"
+
 # =Orchestrate
 #
 # The "orchestrate" stage uses the declared $VM_ENGINE to manage the lifecycle
@@ -28,11 +32,7 @@ declare -a KUBE_BINS=(
 # Supported engines: lxd, docker
 VM_ENGINE="lxd"
 VM_IFACE="eth0"
-VM_NUM_WORKERS=2
-
-# =Persistence
-KUBE_HOST="foo.$VM_ENGINE"
-KUBE_PV="${HOME}/pv"
+VM_NUM_WORKERS=1
 
 ## ==Docker - nodes are launched as persistent docker containers
 # USE_SYSTEM_DOCKER="no"
@@ -41,14 +41,15 @@ DOCKER_DNS_IMG="karelian/kube_base_dnsdock:dev-amd64"
 DOCKER_BRIDGE="docker0"
 
 ## ==LXD - nodes are launched as persistent LXD/LXC containers
-LXD_BASE_IMG="kubuntu"
-LXD_IMG_FROM="images:ubuntu/zesty" # ubuntu 17.04 amd64
-LXD_PROFILE="kube-profile"
+LXD_BASE_IMG="ubuntu-k0-001"
+LXD_IMG_FROM="ubuntu:16.04" # ubuntu amd64 LTS
+LXD_PROFILE="k0-profile"
 LXD_BRIDGE="lxdbr0"
 
 # =Provision
 MASTER_UNITS="etcd kube-apiserver kube-controller-manager kube-scheduler"
 WORKER_UNITS="docker kubelet kube-proxy masquerade"
 WORKER_DOCKER_STORAGE_ENGINE="overlay2"
-KUBE_SERVICE_CLUSTER_IP_RANGE="10.32.0.0/24"
+KUBE_SERVICE_CLUSTER_IP_RANGE="100.64.0.0/17"
+KUBE_SERVICE_MLB_IP_RANGE="100.64.128.0/17"
 SECRET_TOKEN="ooohlotsofs3crets"
