Unite linux host configs

--- a/share/env.sh.sample
+++ b/share/env.sh.sample
@@ -20,10 +20,6 @@ declare -a KUBE_BINS=(
   "kubelet"
 )
 
-# =Persistence
-KUBE_PV="${HOME}/mnt/pv"
-KUBE_HOST="shrewd.lxd"
-
 # =Orchestrate
 #
 # The "orchestrate" stage uses the declared $VM_ENGINE to manage the lifecycle
@@ -34,6 +30,10 @@ VM_ENGINE="lxd"
 VM_IFACE="eth0"
 VM_NUM_WORKERS=1
 
+# =Persistence
+KUBE_HOST="linux.$VM_ENGINE"
+KUBE_PV="${HOME}/mnt/pv"
+
 ## ==Docker - nodes are launched as persistent docker containers
 # USE_SYSTEM_DOCKER="no"
 DOCKER_BASE_IMG="karelian/kube_base_kubian:latest"
@@ -41,9 +41,9 @@ DOCKER_DNS_IMG="karelian/kube_base_dnsdock:dev-amd64"
 DOCKER_BRIDGE="docker0"
 
 ## ==LXD - nodes are launched as persistent LXD/LXC containers
-LXD_BASE_IMG="ubuntu-k0-001"
-LXD_IMG_FROM="ubuntu:16.04" # ubuntu amd64 LTS
-LXD_PROFILE="k0-profile"
+LXD_BASE_IMG="kubuntu"
+LXD_IMG_FROM="images:ubuntu/zesty" # ubuntu 17.04 amd64
+LXD_PROFILE="kube-profile"
 LXD_BRIDGE="lxdbr0"
 
 # =Provision
