--- a/share/templates/lxd_profile.yaml
+++ b/share/templates/lxd_profile.yaml
@@ -1,8 +1,12 @@
 name: ${LXD_PROFILE}
 config:
   raw.lxc: |
+    lxc.aa_profile=unconfined
     lxc.cap.drop=
-    lxc.mount.auto="proc:rw sys:ro"
+    lxc.cgroup.devices.allow=a
+    lxc.mount.auto=proc:rw sys:ro cgroup:ro
+    lxc.kmsg=0
+    lxc.autodev=1
   security.nesting: "true"
   security.privileged: "true"
 description: LXC profile for Kubernetes VMs
