--- a/share/templates/lxd_profile.yaml
+++ b/share/templates/lxd_profile.yaml
@@ -1,28 +1,27 @@
 name: ${LXD_PROFILE}
 config:
   raw.lxc: |
-    lxc.aa_profile=unconfined
+    lxc.apparmor.profile=unconfined
     lxc.cap.drop=
     lxc.cgroup.devices.allow=a
     lxc.mount.auto=proc:rw sys:ro cgroup:ro
-    lxc.kmsg=0
     lxc.autodev=1
   security.nesting: "true"
   security.privileged: "true"
-description: LXC profile for Kubernetes VMs
+description: LXD profile for Kubernetes VMs
 devices:
   eth0:
     name: ${VM_IFACE}
     nictype: bridged
     parent: ${LXD_BRIDGE}
     type: nic
-  kubedir:
-    path: /kube
+  sharedir:
+    path: /ops.kube
     source: ${DOT}
     type: disk
-  pvdir:
-    path: /pv/kube
-    source: ${KUBE_PV}/kube
+  kubedir:
+    path: /kube
+    source: ${OUT_DIR}
     type: disk
   tuntap:
     path: /dev/net/tun
