--- a/share/templates/addons/ingress.yaml
+++ b/share/templates/addons/ingress.yaml
@@ -315,11 +315,9 @@ spec:
           ports:
             - name: http
               containerPort: 80
-              hostPort: 80
               protocol: TCP
             - name: https
               containerPort: 443
-              hostPort: 443
               protocol: TCP
           resources:
             requests:
@@ -327,3 +325,27 @@ spec:
               memory: 90Mi
       serviceAccountName: ingress-nginx
       terminationGracePeriodSeconds: 300
+---
+apiVersion: v1
+kind: Service
+metadata:
+  annotations:
+  labels:
+    app.kubernetes.io/component: controller
+    app.kubernetes.io/instance: ingress-nginx
+    app.kubernetes.io/name: ingress-nginx
+  name: ingress-nginx
+  namespace: ingress-nginx
+spec:
+  ports:
+    - name: http
+      nodePort: 10080
+      port: 80
+      targetPort: 80
+    - name: https
+      nodePort: 10443
+      port: 443
+      targetPort: 443
+  selector:
+    app.kubernetes.io/name: ingress-nginx
+  type: NodePort
