--- a/templates/etc/containerd-config.toml
+++ b/templates/etc/containerd-config.toml
@@ -1,7 +1,15 @@
-[plugins]
-    [plugins.cri.containerd]
-        snapshotter = "overlayfs"
-        [plugins.cri.containerd.default_runtime]
-            runtime_type = "io.containerd.runtime.v1.linux"
-            runtime_engine = "/kube/bin/runc.amd64"
-            runtime_root = ""
+version = 2
+
+[plugins."io.containerd.grpc.v1.cri"]
+  [plugins."io.containerd.grpc.v1.cri".containerd]
+    snapshotter = "overlayfs"
+    default_runtime_name = "runc"
+  [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc]
+    runtime_type = "io.containerd.runc.v2"
+    [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc.options]
+      BinaryName = "/kube/bin/runc.amd64"
+
+[plugins."io.containerd.grpc.v1.cri".registry]
+  [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
+    [plugins."io.containerd.grpc.v1.cri".registry.mirrors."*"]
+      endpoint = ["http://registry.sys.svc.${CLUSTER_DOMAIN}:80"]
