--- a/templates/addons/registry.yaml
+++ b/templates/addons/registry.yaml
@@ -45,10 +45,10 @@ metadata:
   labels:
     k8s-app: registry
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     k8s-app: registry
   ports:
-    - port: 5000
+    - port: 80
       name: http
-      nodePort: 5000
+      targetPort: 5000
