kubelet & containerd to store state on a separate LXC disk
this is mainly here because k8s can't deal with BTRFS properly
as the last major release (1.22)

see:
https://github.com/kubernetes/kubernetes/issues/65204
https://github.com/kubernetes/kubernetes/issues/94335
https://github.com/k3s-io/k3s/issues/2422
https://github.com/kubernetes/kubernetes/issues/95826

--- a/templates/etc/containerd-config.toml
+++ b/templates/etc/containerd-config.toml
@@ -1,4 +1,5 @@
 version = 2
+root = "/var/lib/turtles/containerd-${VM_HOST}"
 
 [plugins."io.containerd.grpc.v1.cri"]
   [plugins."io.containerd.grpc.v1.cri".containerd]
