--- a/templates/lxd_profile.yaml
+++ b/templates/lxd_profile.yaml
@@ -1,11 +1,7 @@
 name: ${LXD_PROFILE}
 config:
   raw.lxc: |
-    lxc.apparmor.profile=unconfined
-    lxc.cap.drop=
-    lxc.cgroup.devices.allow=a
-    lxc.mount.auto=proc:rw sys:rw cgroup:rw:force
-    lxc.autodev=1
+    lxc.mount.auto=proc:rw sys:ro
   security.nesting: "true"
   security.privileged: "true"
 description: LXD profile for Kubernetes VMs
