--- a/doc/config.sample
+++ b/doc/config.sample
@@ -2,11 +2,11 @@
 #
 # During the "prepare" stage we pull essential kubernetes, etcd and docker
 # binaries as well as generate TLS certificates for the cluster.
-V_ETCD="3.4.4"
-V_CNI="0.8.6"
-V_CONTAINERD="1.4.1"
-V_RUNC="1.0.0-rc91"
-V_KUBE="1.19.3"
+V_ETCD="3.4.18"
+V_CNI="1.0.1"
+V_CONTAINERD="1.4.11"
+V_RUNC="1.0.2"
+V_KUBE="1.19.15"
 
 # =Orchestrate
 #
@@ -16,8 +16,8 @@ VM_IFACE="eth0"
 VM_NUM_WORKERS=2
 
 LXD_BASE_IMG="kubuntu"
-LXD_IMG_FROM="ubuntu:20.04" # ubuntu 20.04 amd64
-LXD_PROFILE="k1-lxd-profile"
+LXD_IMG_FROM="ubuntu:22.04" # ubuntu 22.04 amd64
+LXD_PROFILE="kube-lxd-profile"
 LXD_BRIDGE="lxdbr0"
 
 # =Provision
