--- a/templates/lxd_profile.yaml
+++ b/templates/lxd_profile.yaml
@@ -1,6 +1,10 @@
 name: ${LXD_PROFILE}
 config:
   raw.lxc: |
+    lxc.apparmor.profile=unconfined
+    lxc.cap.drop=
+    lxc.autodev=1
+    lxc.cgroup.devices.allow=b ${maj_min} ro
     lxc.mount.auto=proc:rw sys:ro
   security.nesting: "true"
   security.privileged: "true"
@@ -26,6 +30,9 @@ devices:
   tuntap:
     path: /dev/net/tun
     type: unix-char
+  root_device:
+    path: ${root_dev}
+    type: unix-block
   root:
     path: /
     pool: default
