--- a/templates/etc/containerd-config.toml
+++ b/templates/etc/containerd-config.toml
@@ -13,4 +13,4 @@ root = "/var/lib/turtles/containerd-${VM_HOST}"
 [plugins."io.containerd.grpc.v1.cri".registry]
   [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
     [plugins."io.containerd.grpc.v1.cri".registry.mirrors."*"]
-      endpoint = ["http://registry.sys.svc.${CLUSTER_DOMAIN}:80"]
+      endpoint = ["http://registry-np.storage-system.svc.${CLUSTER_DOMAIN}:5000"]
