--- a/templates/etc/containerd-config.toml
+++ b/templates/etc/containerd-config.toml
@@ -10,7 +10,8 @@ root = "/var/lib/turtles/containerd-${VM_HOST}"
     [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc.options]
       BinaryName = "/kube/bin/runc.amd64"
 
-[plugins."io.containerd.grpc.v1.cri".registry]
-  [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
-    [plugins."io.containerd.grpc.v1.cri".registry.mirrors."*"]
-      endpoint = ["http://registry-np.storage-system.svc.${CLUSTER_DOMAIN}:5000"]
+[plugins."io.containerd.grpc.v1.cri".registry.mirrors]
+  [plugins."io.containerd.grpc.v1.cri".registry.mirrors."docker.io"]
+    endpoint = ["http://pull-through.storage-system.svc.${CLUSTER_DOMAIN}:5001", "https://registry-1.docker.io"]
+  [plugins."io.containerd.grpc.v1.cri".registry.mirrors."*"]
+    endpoint = ["http://registry-np.storage-system.svc.${CLUSTER_DOMAIN}:5000"]
