--- a/templates/etc/containerd-config.toml
+++ b/templates/etc/containerd-config.toml
@@ -13,5 +13,5 @@ root = "/var/lib/turtles/containerd-${VM_HOST}"
 [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
   [plugins."io.containerd.grpc.v1.cri".registry.mirrors."docker.io"]
     endpoint = ["http://pull-through.storage-system.svc.${CLUSTER_DOMAIN}:5001", "https://registry-1.docker.io"]
-  [plugins."io.containerd.grpc.v1.cri".registry.mirrors."*"]
+  [plugins."io.containerd.grpc.v1.cri".registry.mirrors."registry-np.storage-system.svc.${CLUSTER_DOMAIN}:5000"]
     endpoint = ["http://registry-np.storage-system.svc.${CLUSTER_DOMAIN}:5000"]
