--- a/templates/etc/containerd-config.toml
+++ b/templates/etc/containerd-config.toml
@@ -11,7 +11,7 @@ root = "/var/lib/turtles/containerd-${VM_HOST}"
       BinaryName = "/kube/bin/runc.amd64"
 
 [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
-  [plugins."io.containerd.grpc.v1.cri".registry.mirrors."hub-cache.storage-system.svc.${CLUSTER_DOMAIN}:5001"]
-    endpoint = ["http://hub-cache.storage-system.svc.${CLUSTER_DOMAIN}:5001"]
-  [plugins."io.containerd.grpc.v1.cri".registry.mirrors."registry-np.storage-system.svc.${CLUSTER_DOMAIN}:5000"]
-    endpoint = ["http://registry-np.storage-system.svc.${CLUSTER_DOMAIN}:5000"]
+  [plugins."io.containerd.grpc.v1.cri".registry.mirrors."hub-cache.storage-system.svc.${CLUSTER_DOMAIN}"]
+    endpoint = ["http://hub-cache.storage-system.svc.${CLUSTER_DOMAIN}"]
+  [plugins."io.containerd.grpc.v1.cri".registry.mirrors."registry-np.storage-system.svc.${CLUSTER_DOMAIN}"]
+    endpoint = ["http://registry-np.storage-system.svc.${CLUSTER_DOMAIN}"]
