--- a/templates/konfig/kube-scheduler.yaml
+++ b/templates/konfig/kube-scheduler.yaml
@@ -1,4 +1,4 @@
-apiVersion: kubescheduler.config.k8s.io/v1beta3
+apiVersion: kubescheduler.config.k8s.io/v1
 kind: KubeSchedulerConfiguration
 clientConnection:
   kubeconfig: "/kube/auth/kube-scheduler.kubeconfig"
