kubelet: configure container runtime via config files instead of flags

--- a/templates/konfig/kubelet.yaml
+++ b/templates/konfig/kubelet.yaml
@@ -16,3 +16,4 @@ podCIDR: "${POD_CIDR}"
 runtimeRequestTimeout: "15m"
 tlsCertFile: "/kube/auth/${VM_HOST}.pem"
 tlsPrivateKeyFile: "/kube/auth/${VM_HOST}-key.pem"
+containerRuntimeEndpoint: "unix:///var/run/containerd/containerd.sock"
